# openb3

./: .gitignore  README.md  main.py  myInvestments.txt  pyproject.toml
docs/: Casos_de_uso.md  Requisitos_Funcionais_e_Nao_Funcionais.md  StatusReport.md
openb3/: __init__.py  __main__.py  data_collector.py  notification_trigger.py  portfolio_manager.py  stock.py  stock_analyzer.py
openb3/data_access_objects/: __init__.py  database.py  notification_trigger_dao.py  portfolio_dao.py  portfolio_stock_dao.py  stock_dao.py  transaction_dao.py  user_dao.py
scripts/: reset.sh  setup.sh
scripts/sql/: reset.sql  setup.sql
